--- a/src/app/categories/pages/category/category.component.html
+++ b/src/app/categories/pages/category/category.component.html
@@ -31,7 +31,7 @@
 
 </div>
 }
-    <button class="absolute size-8 cursor-pointer rounded-full bg-gray-50">
+    <button *ngIf="data.type === 'video' " class="absolute size-8 cursor-pointer rounded-full bg-gray-50">
     <i class="fa-solid fa-play text-mz-secound text-lg"></i>
     </button>
     </div>
