--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,9 +3,11 @@
     'absolute top-0 left-0' : !hidelayout() ,
     'relative' : hidelayout() ,
 }">
-    <nav class="w-[95%] flex justify-between items-center  ">
+    <nav class="w-[95%] flex flex-wrap justify-between items-center  ">
+
 
     <app-logo logoClass="w-32 sm:w-40 "/>
+
 
     <app-links class="hidden lg:inline-block"
     linksClass="flex justify-center items-center gap-1 text-white
@@ -15,7 +17,9 @@
     iconClass="text-mz-primary"
     styleActiveClass="bg-mz-primary rounded-3xl "
     />
+  
     
+
 <div class="flex justify-center items-center gap-2 sm:gap-4">
         <div *ngIf="hidelayout()" class="flex justify-center items-center text-gray-50 gap-2">
             <input #toggleRef (change)="onChanheToggle()"   type="checkbox" checked="true" id="isToggle"
