--- a/src/app/categories/components/category-details/components/details-aside/components/related/related.component.html
+++ b/src/app/categories/components/category-details/components/details-aside/components/related/related.component.html
@@ -23,10 +23,10 @@
         </small>
         </div>
     
-        <div class="flex flex-col justify-center items-start gap-5">
+        <div class="flex flex-col justify-center items-start gap-5 ca">
             <h3 class="text-xs font-[400]">{{data.title}}</h3>
             <div class="flex justify-center items-center gap-2 lowercase">
-            <span>0 view</span>
+            <span>0 {{'categories.views' | translate}}</span>
             <span>{{formatTime(data.created_at)}}</span>
             </div>
         </div>
