--- a/src/app/features/about/page/about.component.html
+++ b/src/app/features/about/page/about.component.html
@@ -1,3 +1,37 @@
-<section class="w-full h-screen">
+<section class="w-full flex flex-col justify-center items-center">
 
+<div class="w-[95%] flex flex-col justify-center items-center gap-5 mt-5">
+
+
+<div class="w-full flex flex-col md:flex-row flex-wrap justify-evenly items-center ">
+<div class="w-full md:w-1/2 flex flex-col justify-center items-start gap-4 ">
+    <h1 class="text-xl md:text-2xl text-left capitalize text-gray-50 font-bold">
+    About Our <span class="font-extrabold text-mz-primary text-2xl md:text-3xl">m&z marketing agency</span>
+    </h1>
+
+    <p class="text-gray-300 text-lg leading-8 capitalize font-[400]">
+        At M&Z Marketing Agency, we are passionate about crafting innovative digital 
+        experiences that elevate brands and drive success. With a team of creative experts 
+        and tech professionals, we provide a full spectrum of services tailored to meet your business needs.
+    </p>
+</div>
+<app-astronaut-image class="w-full md:w-1/2"/>
+</div>
+
+
+    <div class="w-full text-3xl text-center capitalize text-gray-100 font-semibold">
+    our services
+    </div>
+
+    @for (service of ourServicesData(); track service.id) {
+    <app-our-services class="w-full" 
+    [serviceTitle]="service.title"
+    [serviceParagraph]="service.paragraph"
+    [listOurService]="service.list"
+    />
+    }
+    </div>
+
+
+   
 </section>
