--- a/src/app/features/packages/page/packages/packages.component.html
+++ b/src/app/features/packages/page/packages/packages.component.html
@@ -2,18 +2,19 @@
 
     <ul class="w-full h-full flex flex-wrap justify-evenly items-center bg-transparent  my-5">
     @for (package of packages(); track package.id) {
-    @defer (on viewport) {
+    @defer (on viewport){
+    
     <li class="w-[90%] sm:w-100  bg-white mb-12 mt-2 rounded-2xl shadow-xl shadow-mz-secound
     hover:shadow-sm duration-200 flex flex-col justify-start items-center ">
 
     <div class="m-2 flex flex-col justify-center items-start w-[90%] gap-4">
     <div class="w-full flex justify-between items-center">
-    <h1 class="card-title uppercase font-extrabold text-gray-700 text-xl">{{package.level}}</h1>
+    <h1 class="card-title uppercase font-extrabold text-gray-700 text-xl">
+    {{`package.level.${package.level}` | translate}}</h1>
     <span class="text-sm font-semibold text-gray-600">
     {{package.discound / 100 | percent : '1.0-0'}}
     </span>
     </div>
-    <h2 class="text-sm text-gray-500 capitalize">package {{package.level}} to halp you in project</h2>
 
     <ul class="w-full flex justify-center items-center gap-2">
     @let priceAfterDiscound =  package.price - package.price * package.discound / 100 ;
@@ -25,15 +26,15 @@
     
     <button class="w-[100%] btn  bg-mz-secound border-mz-primary border-2 duration-200
     hover:bg-transparent hover:text-mz-secound capitalize font-semibold text-gray-50  ">
-    get package
+    {{'package.getPackage' | translate}}
     </button>
-    <h1 class="capitalize text-gray-900 font-[300] text-lg">whats included :</h1>
+    <h1 class="capitalize text-gray-900 font-[300] text-lg">{{'package.whatsIncluded' | translate}}</h1>
     <ul class="w-full  h-[35vh] overflow-y-scroll">
     @for (value of package.package; track $index) {
     <li class="w-full flex justify-between items-center my-1">
     <a class="text-gray-900 capitalize">
     <i class="fa-solid " [ngClass]="value.isSupport ? 'fa-check text-success' : 'fa-close text-error'"></i>
-    {{value.item}}
+    {{`package.${value.item}` | translate}}
     </a>
     <i class="fa-solid fa-circle-info text-gray-800"></i>
     </li>
