--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -6,10 +6,10 @@ class="absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center "
     after:absolute after:w-full after:h-[20%] after:bg-mz-primary after:opacity-35 after:top-0">
     
     <div class="w-full flex flex-col justify-start items-center z-5 mt-5 gap-2">
-    <div class="line-clamp-1 font-semibold">{{authService.CurrentUser()?.userName}}</div>
+    <div class="line-clamp-1 font-semibold text-gray-800">{{authService.CurrentUser()?.userName}}</div>
     <app-user-image  imageClass="size-14"/>
 
-    <a class="line-clamp-1 z-5 font-semibold ">{{authService.CurrentUser()?.email}}</a>
+    <a class="line-clamp-1 z-5 font-semibold text-gray-950">{{authService.CurrentUser()?.email}}</a>
     </div>
 
     <ul class="relative w-[95%] flex flex-col  justify-start items-start gap-2 text-gray-900
@@ -18,26 +18,26 @@ class="absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center "
     <a (click)="authService.signOut()"
     class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
-    <i class="fa-solid fa-sign-out icons "></i>  sign out
+    <i class="fa-solid fa-sign-out icons "></i>  {{'profile.signOut'}}
     </a>
 </li>
 <li class="w-full"> 
     <a class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
-    <i class="fa-solid fa-clock-rotate-left icons"></i> history
+    <i class="fa-solid fa-clock-rotate-left icons"></i> {{'profile.history'}}
     </a>
 </li>
 <li class="w-full"> 
     <a [routerLink]="['/',{outlets : {'booking-outlet': 'booking' , profile : null}}]" 
     class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
-    <i class="fa-solid fa-book-open icons"></i> booking
+    <i class="fa-solid fa-book-open icons"></i> {{'profile.booking'}}
     </a>
 </li>
 <li class="w-full"> 
     <a routerLink="/" class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
-    <i class="fa-solid fa-home icons"></i> home 
+    <i class="fa-solid fa-home icons"></i>{{'profile.home'}}
     </a>
 </li>
 
