--- a/src/app/features/about/components/astronaut-image/astronaut-image.component.html
+++ b/src/app/features/about/components/astronaut-image/astronaut-image.component.html
@@ -2,6 +2,7 @@
 after:h-[80%] after:bg-mz-secound after:rounded-[25%] after:rounded-br-[50%] after:rounded-tl-[50%]
 after:shadow-2xl after:shadow-black after:border-1 after:border-mz-primary">
 
-<img *ngIf="astronautImage()" class="w-60 animate-updown drop-shadow-lg z-1" 
+<img *ngIf="astronautImage()" 
+class="w-60 animate-updown drop-shadow-lg z-1 hover:opacity-80 duration-150" 
 [src]="astronautImage()" alt="astronaut" loading="lazy">
 </div>
