--- a/src/app/features/home/components/intro-pop-up/intro-pop-up.component.html
+++ b/src/app/features/home/components/intro-pop-up/intro-pop-up.component.html
@@ -2,7 +2,7 @@
 
     <button (click)="initShowIntroPopUp()" type="button"
     class="absolute left-2 top-[50%] translate-y-[-50%] cursor-pointer z-5">
-    <i class="fa-solid  text-[4rem] scale-y-200 text-white hover:opacity-70 duration-200"
+    <i class="fa-solid  text-[4.5rem] scale-x-75 scale-y-200 text-white hover:opacity-70 duration-200"
     [ngClass]="isIntro() ? 'fa-caret-right' : 'fa-caret-left'"></i>
     </button>
 
