--- a/src/app/categories/components/category-details/category-details.component.html
+++ b/src/app/categories/components/category-details/category-details.component.html
@@ -5,9 +5,10 @@
     class="w-[95%] flex flex-wrap flex-col md:flex-row justify-between items-start my-5">
 
     <div class="w-full lg:w-[65%] flex flex-col justify-center items-center gap-4 ">
-        <div class="rounded-2xl shadow-2xl shadow-black border-1 border-mz-primary 
+        <div class="rounded-box shadow-2xl shadow-black border-1 border-mz-primary 
         flex justify-center items-center w-full "
-        [ngClass]="">
+        [ngClass]="categoryDataById()?.category === 'reels' ? 'w-auto h-[70vh] sm:w-full sm:h-[90vh]' 
+        : 'w-full h-auto'">
         
         <div class="h-full">
 
@@ -19,8 +20,9 @@
         type : categoryDataById()?.type! ,
         poster : categoryDataById()?.poster ,
         controls : true ,
-        class : categoryDataById()?.category === 'reels' ? 'w-auto h-[70vh] sm:w-full sm:h-[90vh]' 
-        : 'w-full h-auto rounded-2xl'
+        class : categoryDataById()?.category === 'reels' ? 
+        'w-full h-full object-cover' 
+        : 'w-full h-full rounded-box object-cover'
         }"
         />
     }@placeholder {
