--- a/src/app/categories/components/category-details/components/comments/comments.component.html
+++ b/src/app/categories/components/category-details/components/comments/comments.component.html
@@ -36,7 +36,7 @@
 
     <h2  (click)="initComment()" *ngIf="!isFocus()"
     class="font-[400] cursor-auto text-gray-400 p-1">
-    {{'categories.comments.AddAComment' | translate}}
+    {{'categories.comments.addAComment' | translate}}
     </h2>
     
     <div *ngIf="isFocus()" class=" flex flex-col justify-center items-start">
@@ -61,7 +61,7 @@
     class="capitalize text-sm  rounded-xl   text-gray-50 p-1"
     [ngClass]="!commentValue() ? 'cursor-default opacity-50' 
     : 'bg-mz-secound cursor-pointer hover:bg-mz-primary duration-200'">
-    {{'categories.comments.AddComment' | translate}}
+    {{'categories.comments.addComment' | translate}}
     </button>
 
     </div>
