--- a/src/app/categories/components/category-details/components/comments/components/sent-comments/sent-comments.component.html
+++ b/src/app/categories/components/category-details/components/comments/components/sent-comments/sent-comments.component.html
@@ -27,7 +27,6 @@
         class="w-full outline-none  placeholder:text-gray-50 text-sm py-2"
         
         />
-    
     </div>
     </div>
 
@@ -45,7 +44,7 @@
     class="w-full flex justify-start items-center gap-1  cursor-pointer  duration-150 hover:bg-gray-300">
     <i class="fa-solid fa-edit "></i>
     <a >
-    Edit
+    {{'categories.comments.Edit' | translate}}
     </a>
     </li>
 
@@ -53,7 +52,7 @@
     class="w-full flex justify-start items-center gap-1  cursor-pointer  duration-150 hover:bg-gray-300">
     <i class="fa-regular fa-trash-can "></i>
     <a >
-    Remove
+    {{'categories.comments.Remove' | translate}}
     </a>
     </li>
     </ul>
@@ -64,8 +63,8 @@
 
     <ul *ngIf="isEdit_id() === data.id"
     class="w-full flex justify-end items-center gap-5 capitalize">
-        <li (click)="cancelComment()"   ><a>cancel</a></li>
-        <li (click)="editComment(data)" ><a>edit comment</a></li>
+        <li (click)="cancelComment()"   ><a>{{'categories.comments.cancel' | translate}}</a></li>
+        <li (click)="editComment(data)" ><a>{{'categories.comments.editComment' | translate}}</a></li>
     </ul>
 
     <ul *ngIf="!isEdit_id()"
@@ -77,11 +76,6 @@
         <button type="button" class=" text-xs">
             <i class="fa-regular fa-thumbs-up text-xl"></i> {{0}}
         </button>
-    </li>
-    <li title="like" class="">
-    <a >
-    replay <i class="fa-solid fa-angle-up text-xs"></i>
-    </a>
     </li>
     </ul>
 
