--- a/src/app/features/about/components/astronaut-image/astronaut-image.component.html
+++ b/src/app/features/about/components/astronaut-image/astronaut-image.component.html
@@ -2,7 +2,12 @@
 after:h-[80%] after:bg-mz-secound after:rounded-[25%] after:rounded-br-[50%] after:rounded-tl-[50%]
 after:shadow-2xl after:shadow-black after:border-1 after:border-mz-primary">
 
+@defer (on viewport) {
 <img *ngIf="astronautImage()" 
-class="w-60 animate-updown drop-shadow-lg z-1 hover:opacity-80 duration-150" 
+class="w-60 animate-updown drop-shadow-lg z-1 hover:opacity-90 duration-150 " 
 [src]="astronautImage()" alt="astronaut" loading="lazy">
+}@placeholder {
+    <app-loading  loadingClass="h-100"/>
+}
+
 </div>
