--- a/src/app/features/auth/components/auth-model/auth-model.component.html
+++ b/src/app/features/auth/components/auth-model/auth-model.component.html
@@ -1,18 +1,34 @@
-<section class="w-[95%] sm:w-160 h-[90%] mx-auto fixed bg-gray-50 rounded z-[100]  
+<section class="w-[95%] sm:w-160 h-150  mx-auto fixed bg-gray-50 rounded z-[100]  
 left-[50%] translate-x-[-50%]  top-[50%] translate-y-[-50%] shadow-sm shadow-black
-flex justify-center items-center flex-col 
+flex flex-col justify-evenly items-center border-1 border-mz-secound 
 ">
 
-<div class="w-full flex flex-col items-center my-2">
-    
-<a (click)="closeAuth()">
-    <i class="fa-solid fa-close hover:text-error duration-200 absolute right-5 top-5 icons"></i>
-</a>
+<div class="w-full  flex flex-col justify-center items-center gap-2">
 
-<h2 class="mb-5 text-gray-900 font-bold text-xl capitalize">{{authTilte() | translate}}</h2>
+    <a (click)="closeAuth()">
+    <i class="cursor-pointer fa-solid fa-close hover:text-error duration-200 absolute 
+    right-4 top-4 text-2xl">
+    </i>
+    </a>
+
+    <div class="flex flex-col justify-center items-center  ">
+    <app-lord-icon
+    [options]="{
+    src : 'https://cdn.lordicon.com/kdduutaw.json' ,
+    trigger : triggerUserIcon() ,
+    class : 'size-[80px] sm:size-[100px] border-1 border-mz-primary rounded-3xl shadow-sm shadow-black',
+    colors : 'primary:#434F62,secondary:#4C6793'
+    }"
+    />
+    <h2 class=" text-gray-700 font-bold text-xl capitalize">{{ `auth.${authTilte()}` | translate}}</h2>
+    </div>
+
     <app-sign-with-google (click)="signInWithGoogle()" />
-    <span class=" text-black font-bold my-2">Or</span>
+
+    <span class=" text-black font-bold">{{'auth.or' | translate}}</span>
+
     <ng-content />
+
 </div>
 </section>
 
