--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -1,18 +1,20 @@
     <app-auth-model authTilte="register"> 
         <form [formGroup]="form" (ngSubmit)="register(form)"
-            class="w-[90%] flex flex-col justify-center items-center gap-5">
+            class="w-[90%] flex flex-col justify-center items-center gap-4">
 
         <div class="w-full flex flex-col justify-center items-center">
-            <input formControlName="userName" type="text" 
-            class="w-full  text-gray-900 placeholder:text-gray-500
-            input input-neutral focus:outline-mz-primary border-gray-300 focus:border-transparent
-            border-2 bg-gray-50" 
-            placeholder="User Name" />
+
+        <input formControlName="userName" type="text" 
+        class="w-full  text-gray-900 placeholder:text-gray-500
+        input input-neutral focus:outline-mz-primary border-gray-300 focus:border-transparent
+        border-2 bg-gray-50" 
+        placeholder="User Name" />
+
     @if(form.get('userName')?.errors && form.get('userName')?.touched){
-    <div class="w-full flex flex-col justify-center items-start my-1.5 text-sm text-error 
+    <div class="w-full flex flex-col justify-center items-start my-1 text-sm text-error 
     capitalize gap-1">
-      <p *ngIf="form.get('userName')?.getError('required')">this userName is required!</p>
-      <p *ngIf="form.get('userName')?.getError('maxlength')">write a valid userName!</p>
+      <p *ngIf="form.get('userName')?.getError('required')">{{'auth.userNameRequired' | translate}}</p>
+      <p *ngIf="form.get('userName')?.getError('maxlength')">{{'auth.userNameValid' | translate}}</p>
     </div>
     }
     </div>
@@ -22,14 +24,14 @@
         </div>
             <button type="submit"  
             class="w-full  btn  btn-neutral  bg-mz-primary hover:bg-mz-secound
-            duration-200 text-gray-50 ">
-            Register
+            duration-200 text-gray-50 capitalize">
+            {{'auth.register' | translate}}
             </button>
             </form>
         
-            <p class="text-center mt-3 text-[14px] text-gray-900">you already have an account?
+            <p class="text-center  text-[14px] text-gray-900">{{'auth.yesAccount' | translate}}
             <a [routerLink]="['/' ,{outlets : { loginIn: 'loginIn'  , register : null }}]"
-            class="text-gray-600 link">log in
+            class="text-gray-600 link">{{'auth.logIn' |translate}}
             </a>
             </p>
 </app-auth-model>
