--- a/src/app/features/packages/page/packages/packages.component.html
+++ b/src/app/features/packages/page/packages/packages.component.html
@@ -1,8 +1,9 @@
 <section class="w-full flex flex-col justify-center items-center gap-2">
 
-    <h1 class="text-lg md:text-xl text-left capitalize text-gray-50 font-bold mt-5">
-    <span class="font-extrabold text-mz-primary text-2xl md:text-3xl">Our Packages</span>
-    Tailored Solutions for Your Business Success
+    <h1 class="text-lg md:text-xl  capitalize text-gray-50 font-semibold mt-5 text-center">
+    <span class="font-extrabold text-mz-primary text-xl md:text-2xl">
+        {{'package.ourPackages' | translate}}</span>
+    {{'package.title' | translate}}
     </h1>
     
     <ul class="w-full h-full flex flex-wrap justify-evenly items-center bg-transparent  my-5">
